--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
       <code>
 #include<stdio.h>
 int main() {
-    printf("Hello  how are you Geeks");
+    printf("Hello askdjf  how are you Geeks");
 }
 <!--code Tag starts here -->
       </code>
