--- a/about.html
+++ b/about.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html>
- 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <p> uytgytrcy </p>
+</head>
 <body>
-    <pre>
-<!--code Tag starts here -->
-      <code>
-#include<stdio.h>
-int main() {
-    printf("Hello askdjf  how are you Geeks");
-}
-<!--code Tag starts here -->
-      </code>
-    </pre>
+   its completely new one
 </body>
- 
 </html>
