--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
     </aside>
     <main class="content">
       <h2>About Me</h2>
-      <p>I don't look like some handsome horse, but I am a real desert king. I can survive days without water.</p>
+      <p> I am a real desert king. I can survive days without water.</p>
       <h2>My Career</h2>
       <p>I work as a web developer for a company that makes websites for camel businesses.</p>
       <hr><br>
